src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ICB Mobile Channel</fullName>
        <description>Ice cream sales process to manage the sales of mobile channel</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NA FS Sales Process</fullName>
        <description>NA FS Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>01 - Prospecting</fullName>
        </values>
        <values>
            <fullName>02 - Qualification</fullName>
        </values>
        <values>
            <fullName>03 - Proposal</fullName>
        </values>
        <values>
            <fullName>04 - Verbal Commitment</fullName>
        </values>
        <values>
            <fullName>05 %E2%80%93 Won</fullName>
        </values>
        <values>
            <fullName>06 - Lost</fullName>
        </values>
        <values>
            <fullName>07 - Not Pursued</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RFS Sales Process</fullName>
        <description>Stages for Russian opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-New</fullName>
        </values>
        <values>
            <fullName>2-Negotiation</fullName>
        </values>
        <values>
            <fullName>3a-Won</fullName>
        </values>
        <values>
            <fullName>3b-Lost</fullName>
        </values>
        <values>
            <fullName>4-First Delivery</fullName>
        </values>
        <values>
            <fullName>5a-Done</fullName>
        </values>
        <values>
            <fullName>5b-Half-done</fullName>
        </values>
        <values>
            <fullName>5c-Lost</fullName>
        </values>
    </businessProcesses>

    <fields>
        <fullName>Account_History__c</fullName>
        <description>Won/lost opportunities? 
How are they performing? Please add discovery snapshot - yellow tab
Is the customer growing?</description>
        <inlineHelpText>Won/lost opportunities? 
How are they performing? Please add discovery snapshot - yellow tab
Is the customer growing?</inlineHelpText>
        <label>Account History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account Plan this Opportunity is related to</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>FS_Account_Plan__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementDate__c</fullName>
        <description>Created for Opportunity Forecasting and it is required before moving to stage=&apos;05-Won&apos;.</description>
        <inlineHelpText>Expected date of customer commitment.</inlineHelpText>
        <label>Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <inlineHelpText>Expected date of first shipment (agreement in force).</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is determined based on the actions when an approval request is  approved or rejected .</description>
        <label>DealApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defined_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Defined Objective related to this Opportunity.</inlineHelpText>
        <label>Defined Objective</label>
        <referenceTo>FS_Defined_Objective__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSNA_BMI__c</fullName>
        <inlineHelpText>Brand Marketing Rewards</inlineHelpText>
        <label>BMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSNA_Distributor_TMI__c</fullName>
        <description>Roll-up of the Product Level Distributor TMI</description>
        <inlineHelpText>Expected Distributor Earnings from opportunity.</inlineHelpText>
        <label>NA Distributor TMI</label>
        <summarizedField>OpportunityLineItem.Copy_of_DIST_TMI__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSNA_Gross_Margin__c</fullName>
        <formula>(Amount * 0.99 - 
(FS_TotalRate__c+FSNA_Distributor_TMI__c+FS_TotalHQRate__c+FS_LumpSum__c)-
Total_Opp_COGS__c) /(Amount * 0.99 - 
(FS_TotalRate__c+FSNA_Distributor_TMI__c+FS_TotalHQRate__c+FS_LumpSum__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Gross Margin % for all products within opportunity.</inlineHelpText>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSNA_Margin_Market_Code__c</fullName>
        <inlineHelpText>Respective Product groupings.</inlineHelpText>
        <label>Margin Market Code</label>
        <picklist>
            <picklistValues>
                <fullName>6I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6I DRESSINGS-CONDIMENTS-DIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6K SAUCES-GRAVIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8Z RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>93 MAYONNAISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOH MAYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1 SOUPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1 BASES-BOUILLIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1 SPREADS AND TOPPING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOH ACCELERATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOH MAYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 TEA-BEVERAGES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1 FLAVOUR DELIVERY SYS-SEASONING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOT TEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICED TEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K1 MEALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knorr Ultimate Low/Reduced Sodium*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1 CRYSTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 MISCELLANEOUS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSNA_Margin_Market_Target__c</fullName>
        <formula>IF(
ISPICKVAL(CurrencyIsoCode,&quot;USD&quot;),
CASE(
FSNA_Margin_Market_Code__c,
&quot;6I DRESSINGS-CONDIMENTS-DIPS&quot;,0.265,
&quot;6K SAUCES-GRAVIES&quot;,0.385,
&quot;93 MAYONNAISE&quot;,0.338,
&quot;Z5 FOH MAYO&quot;,0.32,
&quot;Z1 BOH MAYO&quot;,0.251,
&quot;D1 SOUPS&quot;,0.33,
&quot;X4 US SDJ&quot;,0.22,
&quot;Z3 CAN SDJ&quot;,0.29,
&quot;E1 BASES-BOUILLIONS&quot;,0.295,
&quot;Z9 Knorr Ultimate Low/Reduced Sodium*&quot;,0.23,
&quot;X1 US LCB&quot;,0.22,
&quot;Z2 CAN LCB&quot;,0.339,
&quot;F1 SPREADS AND TOPPING&quot;,0.2,
&quot;G1 TEA-BEVERAGES&quot;,0.3,
&quot;X2 SPECIALTY TEA CANADA&quot;,0.404640144481131,
&quot;Z6 HOT TEA CANADA&quot;,0.308416596202267,
&quot;X3 SPECIALTY TEA US&quot;,0.238929580293853,
&quot;Z7 HOT TEA US&quot;,0.229022571071625,
&quot;Z8 ICED TEA&quot;,0.342713952331212,
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,0.668,
&quot;K1 MEALS&quot;,0.35,
&quot;N1 CRYSTAL&quot;,0,
&quot;8Z RETAIL&quot;,0.45,
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,0.668,
&quot;FOH ACCELERATION&quot;,0.15,
&quot;Q1 MISCELLANEOUS&quot;,0.595,
0),
IF(
ISPICKVAL(CurrencyIsoCode,&quot;CAD&quot;),
CASE(FSNA_Margin_Market_Code__c,
&quot;6I DRESSINGS-CONDIMENTS-DIPS&quot;,0.265,
&quot;6K SAUCES-GRAVIES&quot;,0.385,
&quot;93 MAYONNAISE&quot;,0.338,
&quot;Z5 FOH MAYO&quot;,0.3,
&quot;Z1 BOH MAYO&quot;,0.237976924226836,
&quot;D1 SOUPS&quot;,0.33,
&quot;X4 US SDJ&quot;,0.22,
&quot;Z3 CAN SDJ&quot;,0.258215324788885,
&quot;E1 BASES-BOUILLIONS&quot;,0.240715650567646,
&quot;Z9 Knorr Ultimate Low/Reduced Sodium*&quot;,0.23,
&quot;X1 US LCB&quot;,0.22,
&quot;Z2 CAN LCB&quot;,0.339,
&quot;F1 SPREADS AND TOPPING&quot;,0.2,
&quot;G1 TEA-BEVERAGES&quot;,0.3,
&quot;X2 SPECIALTY TEA CANADA&quot;,0.404640144481131,
&quot;Z6 HOT TEA CANADA&quot;,0.25,
&quot;X3 SPECIALTY TEA US&quot;,0.238929580293853,
&quot;Z7 HOT TEA US&quot;,0.229022571071625,
&quot;Z8 ICED TEA&quot;,0.3,
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,0.668,
&quot;K1 MEALS&quot;,0.35,
&quot;N1 CRYSTAL&quot;,0,
&quot;8Z RETAIL&quot;,0.45,
&quot;H1 FLAVOUR DELIVERY SYS-SEASONING&quot;,0.668,
&quot;FOH ACCELERATION&quot;,0.15,
&quot;Q1 MISCELLANEOUS&quot;,0.595,
0),
0)
)</formula>
        <inlineHelpText>Expected average profitability for opportunities within respective market.</inlineHelpText>
        <label>Margin Market Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSNA_TMI__c</fullName>
        <inlineHelpText>$ Value of Operator discounts from opportunity.</inlineHelpText>
        <label>Operator TMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSNA_TotalSpend__c</fullName>
        <formula>FS_TotalHQRate__c +   FS_TotalRate__c  +   FSNA_Distributor_TMI__c   +  FS_LumpSum__c + FSNA_BMI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total TMI invested in opportunity (Sum of Distributor and Operator)</inlineHelpText>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSNA_US_Distributor_TMI__c</fullName>
        <description>Distributer TMI for US Cluster</description>
        <label>Distributor TMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_AverageGrossProfit__c</fullName>
        <label>Average Gross Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_ClaimedCaseGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to identify if &apos;Monthly Claimed Case&apos; generated for MABE Won opportunity</description>
        <label>Claimed Case Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_Distributer_Payer_Code__c</fullName>
        <description>It is used to populate distributer payer code which will be coming from SAP</description>
        <label>Distributer Payer Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_DistributorTMI__c</fullName>
        <inlineHelpText>Distributor expected to supply products to operator. Used for determining distributor TMI.</inlineHelpText>
        <label>Distributor TMI</label>
        <picklist>
            <picklistValues>
                <fullName>US Direct / CED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Sysco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinhart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US GFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US OTher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Only (Food Buy, Aramark, Sodexho, Compass)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Sysco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA GFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colabor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Distributor_Type__c</fullName>
        <description>Formula field that retrieves the Distributor Type of the Distributor Account</description>
        <formula>TEXT(FS_distributor__r.FS_Distributor_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_ExistingBusinessType__c</fullName>
        <description>To represent Existing Business Type for Russia</description>
        <label>Existing Business Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Grib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_ExistingTradeProContractID__c</fullName>
        <label>Existing TradePro Contract ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Fixed_Price_Count__c</fullName>
        <description>To count the opportunity products which the fixed price is true</description>
        <label>Fixed Price Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.FS_FixedPrice__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_GPOName__c</fullName>
        <label>GPO Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_GrossMarginTarget__c</fullName>
        <description>This field is calculate Gross Margin Target and used to MABE Approval Process.</description>
        <formula>IF(AND(FS_MarketTarget__c &gt; 0,FS_MarketTarget__c &gt;= FS_AverageGrossProfit__c),(FS_MarketTarget__c - FS_AverageGrossProfit__c )/ FS_MarketTarget__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Indicator__c</fullName>
        <description>It displays a GREEN/RED stoplight on the page based on DealRequired(Opportunity) Field</description>
        <formula>IF(
DealApproved__c=true, 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20)
)</formula>
        <inlineHelpText>Green when fully approved and pricing ready for customer review.</inlineHelpText>
        <label>Approval Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_LumpSum__c</fullName>
        <inlineHelpText>Incentive funds paid directly to Operator, not tied Branding Activation Activities.</inlineHelpText>
        <label>Lump Sum TMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_MDMRequestSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: indicate that MDM email request has already been sent</description>
        <label>MDM Request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_MSCS__c</fullName>
        <formula>IF(FS_TotalNumberOfCases__c&gt;0, FS_LumpSum__c / FS_TotalNumberOfCases__c, null)</formula>
        <inlineHelpText>Allocation (Rate / Case) to product of Lump sum payments.</inlineHelpText>
        <label>MS/CS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_MarketTarget__c</fullName>
        <label>Market Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_NoOFSampleOrders__c</fullName>
        <label>No OF Sample Orders</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.FS_Sample__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_Owner_Manager__c</fullName>
        <label>Owner Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FS_Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Rate__c</fullName>
        <inlineHelpText>Rebate Discount provided on individual product.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_ReasonDescription__c</fullName>
        <label>Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_SiebelID__c</fullName>
        <label>Siebel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Start_Date__c</fullName>
        <description>Start Date for the Opportunity</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Sub_Sector__c</fullName>
        <description>This is used for risk activity</description>
        <label>Sub Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SupplyCost__c</fullName>
        <description>Formula pointing up to the Distributor&apos;s Supply Cost</description>
        <formula>FS_distributor__r.FS_supplyCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supply Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_TPRApprovedByLineManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Line Manager approval flag</description>
        <label>TPR Approved by Line Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_TPRApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: This will be used to flag the opportunity as TPR Approved.</description>
        <label>TPR Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_TotalDiscountVolume__c</fullName>
        <label>Total Discount Volume</label>
        <summarizedField>OpportunityLineItem.FS_DiscountVolume__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalDiscount__c</fullName>
        <formula>FS_MSCS__c  + FS_TotalHQRate__c  +  FS_TotalRate__c</formula>
        <inlineHelpText>Total discount offered to operator.</inlineHelpText>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_TotalGMwithTPR__c</fullName>
        <formula>((FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c)- 
FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c)*FS_offInvoice__c) 
-FS_TotalproductCost__c-FS_SupplyCost__c*(FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c)- 
FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c)*FS_offInvoice__c)) 
/(FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c) 
-FS_TotalGrossSalesValue__c*(1-FS_onInvoice__c)*FS_offInvoice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GM with TPR = 0%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_TotalGrossProfit__c</fullName>
        <description>Created To display the sum of GrossProfit	from Opportunity Product.</description>
        <label>Total GP</label>
        <summarizedField>OpportunityLineItem.FS_grossProfit__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalGrossSalesValue__c</fullName>
        <description>Created to display the total of GSV from opportunity product object.</description>
        <label>Total GSV</label>
        <summarizedField>OpportunityLineItem.FS_grossSalesValue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalHQRate__c</fullName>
        <inlineHelpText>Total discount offered paid directly to HQ or Corporate Accounts.</inlineHelpText>
        <label>Total HQ Rate</label>
        <summarizedField>OpportunityLineItem.FSNA_TotalHQRate__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalNumberOfCases__c</fullName>
        <inlineHelpText>Total quantity count for opportunity.</inlineHelpText>
        <label>Total Quantity</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalRate__c</fullName>
        <inlineHelpText>Total rebate discount offered to operator.</inlineHelpText>
        <label>Total Rate</label>
        <summarizedField>OpportunityLineItem.FSNA_TotalDeviatedRate__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalTPRPercent__c</fullName>
        <description>Created for displaying the total TPR%</description>
        <formula>FS_TotalTPR__c/FS_TotalGrossSalesValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TPR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_TotalTPR__c</fullName>
        <label>Total TPR</label>
        <summarizedField>OpportunityLineItem.FS_temporaryPriceReduction__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalTurnoverNA__c</fullName>
        <inlineHelpText>Net in Pocket for UFS (NSV - Total TMI)</inlineHelpText>
        <label>Total Turnover (NA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_TotalTurnover__c</fullName>
        <description>To display the Total Turnover from Opportunity Product.</description>
        <formula>(FS_TotalGrossSalesValue__c - FS_TotalDiscountVolume__c - FS_TotalTPR__c) * (1-FS_onInvoice__c)-(FS_TotalnetInvoiceValue__c*FS_offInvoice__c)</formula>
        <label>Total Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_TotalgrossMargin__c</fullName>
        <description>Created To display the sum of grossMargin(GM)from Opportunity Product.</description>
        <formula>FS_TotalGrossProfit__c / FS_TotalTurnover__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_TotalnetInvoiceValue__c</fullName>
        <description>Created To display the sum of NIV from Opportunity Product.</description>
        <label>Total NIV</label>
        <summarizedField>OpportunityLineItem.FS_netInvoiceValue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalproductCost__c</fullName>
        <description>Created To display the sum of productCost	from Opportunity Product.</description>
        <label>Total PC</label>
        <summarizedField>OpportunityLineItem.FS_productCost__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TotalsupplyCost__c</fullName>
        <description>Created To display the sum of supplyCost	from Opportunity Product.</description>
        <label>Total SC</label>
        <summarizedField>OpportunityLineItem.FS_supplyCost__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_TradeProContractID__c</fullName>
        <label>TradePro Contract ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Type_from_Objective__c</fullName>
        <formula>TEXT( Defined_Objective__r.FS_Objective_Type__c)</formula>
        <inlineHelpText>Opportunity Type as linked to Objective.</inlineHelpText>
        <label>Type from Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_amountCasePiece__c</fullName>
        <description>Roll-up Summary for the Total List Price for all Opportunity Products under Opportunity object</description>
        <label>Amount (Case/Piece)</label>
        <summarizedField>OpportunityLineItem.FS_totalListPrice__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FS_casesPiece__c</fullName>
        <description>Determines the type of product package whether it is by Cases or individual pieces</description>
        <label>Cases/piece</label>
        <picklist>
            <picklistValues>
                <fullName>piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cases</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used for TPR process for Russia cluster</description>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_endDateTPR__c</fullName>
        <description>End Date for the TPR</description>
        <label>End Date TPR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_internalOrder__c</fullName>
        <description>Internal code for the Order to be used in the Opportunity</description>
        <label>Internal Order</label>
        <picklist>
            <picklistValues>
                <fullName>40002843 TPRs of Chains team_RUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002981 TPRs of Moscow_Rus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002982 TPRs of St Peterburg_Rus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002983 TPRs of Slabco team_RUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002984 TPRs of Metro team_RUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002985 TPRs of Regions_Rus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40002986 TPRs for write-off_RUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_kindOfTPR__c</fullName>
        <description>Comment box describing the kind of TPR used for the opportunity</description>
        <label>Kind of TPR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_offInvoice__c</fullName>
        <description>Formula field pointing up to the Distributor&apos;s Off Invoice</description>
        <formula>FS_distributor__r.FS_offInvoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_onInvoice__c</fullName>
        <description>Formula field pointing up to the Distributor&apos;s On Invoice</description>
        <formula>FS_distributor__r.FS_onInvoice__c+if(FS_prePaid__c=true 
,if(FS_selfCollection__c=True,0.03,0.02) 
,if(FS_selfCollection__c=True,0.01,0.00) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_prePaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adds 2% to TPR discount in Opportunity Product if checked</description>
        <label>Pre-paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_selfCollection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Adds 1% to TPR discount in Opportunity Product if checked</description>
        <label>Self-Collection</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>